fixed text align for really small screens

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -401,6 +401,7 @@ nav span:active {
 
   .courses h1 {
     font-size: 3rem;
+    text-align: center;
   }
 
   .course p {
@@ -443,6 +444,7 @@ nav span:active {
   .exhibit h1 {
     font-size: 3rem;
     margin: 2rem auto 1rem;
+    text-align: center;
   }
 }
 
